# validpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: pythonpackage.yml
tests/: test_func.py
validpy/: __init__.py
