[tool.poetry]
name = "validpy"
version = "0.1.0"
description = "Validation of function arguments and return values."
authors = ["0scarB <oscarb@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^5.4.1"
tox = "^3.14.6"
tox-pyenv = "^1.1.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
